feat: add new font section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,45 @@
             <p>The quick brown fox jumps over the lazy dog</p>
         </div>
     </div>
+    <h1>font</h1>
+    <div class="font">
+        <div id="font-item1">
+            <h1>italic 1.2em "Cuprum", serif</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item2">
+            <h1>italic small-caps bold 16px/2 cursive</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item3">
+            <h1>small-caps bold 24px/1 sans-serif</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item4">
+            <h1>caption</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item5">
+            <h1>icon</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item6">
+            <h1>menu</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item7">
+            <h1>message-box</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item8">
+            <h1>status-bar</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+        <div id="font-item9">
+            <h1>small-caption</h1>
+            <p>The quick brown fox jumps over the lazy dog</p>
+        </div>
+    </div>
 </body>
 
 </html>
